wip - bringing back color editing

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <div id="color-settings">
     <label>color palette:</label>
-    <button onclick="addColor()">add new color</button>
+    <button onclick="addPaletteColor(255, 255, 255, -1)">add new color</button>
     <div id="color-palette"></div>
   </div>
 
