--- a/index.html
+++ b/index.html
@@ -45,15 +45,21 @@
     <div id="color-palette"></div>
   </div>
 
-  <div id="color-editor">
-    <label>editing color:</label>
-    <label for="color_r">r:</label>
-    <input type="number" min="0" max="255" class="colorinput" id="color_r" value="">
-    <label for="color_g">g:</label>
-    <input type="number" min="0" max="255" class="colorinput" name="color_g" id="color_g" value="">
-    <label for="color_b">b:</label>
-    <input type="number" min="0" max="255" class="colorinput" name="color_b" id="color_b" value="">
-    <button id="remove-color">remove selected color</button>
+  <div id="color-editor" class="hidden">
+    <div>
+      <label>editing color <span id="editing-color-index"></span></label>
+    </div>
+    <div>
+      <label for="color_r">r:</label>
+      <input type="number" min="0" max="255" class="colorinput" id="color_r" value="">
+      <label for="color_g">g:</label>
+      <input type="number" min="0" max="255" class="colorinput" name="color_g" id="color_g" value="">
+      <label for="color_b">b:</label>
+      <input type="number" min="0" max="255" class="colorinput" name="color_b" id="color_b" value="">
+    </div>
+    <div>
+      <button id="remove-color" onclick="removePaletteColor()">remove this color</button>
+    </div>
   </div>
 
   <div id="settings-buttons">
@@ -73,7 +79,7 @@
     <button onclick="choosePreset('horizon')">horizon</button>
   </div>
 
-  <button onclick="toggleInfoBox();" id="toggle-info">what is this?</button>
+  <button onclick="toggleInfoBox()" id="toggle-info">what is this?</button>
 
   <div id="infobox">
     <p>
