Add github link

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
       no two pixer drawings are alike.
     </p><p>
       a project by <a href="http://reidmitchell.net" target="_blank">reid</a>
+      | view the source on <a href="https://github.com/reid47/pixers/" target="_blank">GitHub</a>
     </p>
   </div>
 
